# otel-rlm-logsearch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: generate_sample_data.py  setup_pyodide_packages.sh
src/otel_rlm_logsearch/: __init__.py  catalog.py  cli.py  config.py  dataframe.py  mcp_server.py  pyodide_setup.py  signature.py  solver.py
